# atr-sl-cpp

./: .gitignore  CMakeLists.txt  conanfile.py
.github/workflows/: ci.yml
bench/: bench_atr.cpp
include/: atr_sl.hpp
src/: atr_sl.cpp  cmakelists.txt
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: test_atr.cpp
